style.css
body {
    padding: 0;
    margin: 0;
    background-color: lightgray;
    height: 100vh;
    width: 100vw;
}
header {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 3vh;
    font-size: 25px;
    font-weight: 550;
    background-color: #6665DD;

}
.content {
    height: 92.9vh;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #473BF0;
}
.gameboard {
    display: grid;
    gap: 10px;
    grid-template-columns: repeat(3, 80px);
    grid-template-rows: repeat(3, 80px);
}
.boxes {
    border-radius: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: lightblue;
}

footer {
    display: flex;
    height: 4vh;
    justify-content: center;
    align-items: center;
    background-color: #6665DD ;
}


.menu {
    position: fixed;
    height: 100%;
    width: 100%;
    background-color: rgba(128, 128, 128, 0.582);    
    display: flex;
    justify-content: center;
    align-items: center;
    font-family:'Courier New', Courier, monospace;
}

.menuInfo {
    height: 500px;
    width: 700px;
    border: 2px solid black;
    background-color: white;
    display: grid;
    grid-template-rows: 0.2fr 3fr 0.5fr;
}

.menuTop {
    display: grid;
    grid-template-columns: 4fr 0.15fr;
    text-align: center;
    padding: 3px 0 0 0;
    font-weight: bold;
    font-size: larger;
}

.menuTitle {
    padding: 0 0 0 20px;
}

.menuContent {
    display: grid;
    grid-template-columns: 1fr 1fr;
    
}

.menuBot {
    display: flex;
    justify-content: center;
    align-items: center;
    padding-bottom: 10px;
}

.menuLeft {
    display: grid;
    grid-template-rows: 0.3fr repeat(3, 1fr);
}

.menuRight {
    display: grid;
    grid-template-rows: 0.3fr repeat(3, 1fr);
    border-left: 2px solid black;
}

.player {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: larger;
}

.name {
    display: flex;
    justify-content:center;
    align-items: center;
    gap: 10px;
}

.whosPlaying{
    display: flex;
    justify-content: center;
    align-items: center;
}

.playerBut {
    height: 50px;
    width: 150px;
    border-radius: 10px;
}

.startBut {
    height: 50px;
    width: 150px;
    border-radius: 10px;
}

